--- a/apps/desktop/public/index.html
+++ b/apps/desktop/public/index.html
@@ -12,11 +12,11 @@
     <meta name="robots" content="noodp,noydir" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Win11 in React</title>
+    <title>Desktop</title>
     <link rel="stylesheet" href="dycalendar.css" />
-    <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/gh/pythonpad/brython-runner/lib/brython-runner.bundle.js"></script>
+    <link rel="stylesheet" href="other/fabric.min.css" />
+    <link href="other/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <script src="other/brython-runner.bundle.js"></script>
   </head>
 
   <body data-force="false">
