--- a/apps/desktop/public/index.html
+++ b/apps/desktop/public/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="other/fabric.min.css" />
     <link href="other/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <script src="other/brython-runner.bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="vendors/css/fontawesome.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/escapp.css">
+    <script type="text/javascript" src="vendors/jquery-3.4.0.min.js"></script>
   </head>
 
   <body data-force="false">
