--- a/apps/desktop/public/index.html
+++ b/apps/desktop/public/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/fontawesome.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/escapp.css">
     <script type="text/javascript" src="vendors/jquery-3.4.0.min.js"></script>
+    <script type="text/javascript" src="vendors/escapp.js"></script>
   </head>
 
   <body data-force="false">
